Closed Bug 1804732 Opened 2 years ago Closed 2 years ago

Leak in wpt basic-auth test for websocket over h2

Categories

(Core :: Networking: WebSockets, defect, P2)

defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox110 --- fixed

People

(Reporter: edgul, Assigned: edgul)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

./mach wpt testing/web-platform/tests/websockets/basic-auth.any.js is leaking. This was uncovered (or introduced by) websocket refactor for h2.

Output (snippet) when running locally on linux 64 bit:

...
1:06.58 PASS leakcheck: tab no leaks detected!

 1:06.58 INFO leakcheck | Processing leak log file /tmp/tmpyvz81a1m/runtests_leaks_908838.log
 1:06.58 INFO 
 1:06.58 INFO == BloatView: ALL (cumulative) LEAK AND BLOAT STATISTICS, default process 908988
 1:06.58 INFO 
 1:06.58 INFO      |<----------------Class--------------->|<-----Bytes------>|<----Objects---->|
 1:06.58 INFO      |                                      | Per-Inst   Leaked|   Total      Rem|
 1:06.58 INFO    0 |TOTAL                                 |       46    15760| 3840733      206|
 1:06.58 INFO   24 |AddrHostRecord                        |      408      408|      93        1|
 1:06.58 INFO   25 |AddrInfo                              |       80       80|      93        1|
 1:06.58 INFO  185 |CommonSocketControl                   |      376      376|      11        1|
 1:06.58 INFO  211 |CondVar                               |       80      320|    1194        4|
 1:06.58 INFO  244 |CookieService                         |      104      104|       1        1|
 1:06.58 INFO  283 |DataStorage                           |      432      864|       3        2|
 1:06.58 INFO  482 |HpackDynamicTableReporter             |       32       64|       4        2|
 1:06.58 INFO  484 |Http2Session                          |     1176     1176|       2        1|
 1:06.58 INFO  486 |Http2StreamTunnel                     |      416      416|       5        1|
 1:06.58 INFO  549 |InputStreamTunnel                     |       48       48|       5        1|
 1:06.58 INFO  647 |Mutex                                 |       72     1152|   14006       16|
 1:06.58 INFO  651 |NSSSocketControl                      |      528      528|      11        1|
 1:06.58 INFO  697 |OutputStreamTunnel                    |       48       48|       5        1|
 1:06.58 INFO 1109 |PollableEvent                         |       32       32|       1        1|
 1:06.58 INFO 1170 |ReentrantMonitor                      |       40       40|    1126        1|
 1:06.58 INFO 1219 |RequestContextService                 |       80       80|       1        1|
 1:06.58 INFO 1391 |TaskQueue                             |      376      752|     493        2|
 1:06.58 INFO 1408 |ThirdPartyUtil                        |       32       32|       1        1|
 1:06.58 INFO 1412 |ThreadSafeWeakReference               |       24       48|     695        2|
 1:06.58 INFO 1431 |TlsHandshaker                         |       64       64|      20        1|
 1:06.59 INFO 1495 |WeakReference                         |       32       32|    1846        1|
 1:06.59 INFO 1815 |nsCategoryObserver                    |      104      104|       5        1|
 1:06.59 INFO 1852 |nsDNSRecord                           |       64       64|      93        1|
 1:06.59 INFO 1865 |nsDeque                               |      104      312|    3285        3|
 1:06.59 INFO 1866 |nsDequeBase                           |       96      288|    3285        3|
 1:06.59 INFO 1905 |nsEffectiveTLDService                 |     1440     1440|       1        1|
 1:06.59 INFO 1945 |nsHostRecord                          |      264      264|      95        1|
 1:06.59 INFO 1974 |nsHttpAuthCache::OriginClearObserver  |       32       64|       2        2|
 1:06.59 INFO 1979 |nsHttpConnection                      |      592      592|      20        1|
 1:06.59 INFO 1982 |nsHttpConnectionInfo                  |      232      232|     198        1|
 1:06.59 INFO 1983 |nsHttpConnectionMgr                   |      432      432|       1        1|
 1:06.59 INFO 1985 |nsHttpHandler                         |     1280     1280|       1        1|
 1:06.59 INFO 1991 |nsIDNService                          |      136      136|       1        1|
 1:06.59 INFO 1993 |nsIOService                           |      496      496|       1        1|
 1:06.59 INFO 2015 |nsLocalFile                           |      184      368|   10666        2|
 1:06.59 INFO 2018 |nsMainThreadPtrHolder<T>              |       40      120|     121        3|
 1:06.59 INFO 2028 |nsNSSCertificate                      |      136      408|      90        3|
 1:06.59 INFO 2042 |nsNetworkLinkService                  |       56       56|       1        1|
 1:06.59 INFO 2050 |nsObserverService                     |       80       80|       1        1|
 1:06.59 INFO 2112 |nsSiteSecurityService                 |       72       72|       1        1|
 1:06.59 INFO 2116 |nsSocketTransport                     |      816      816|      20        1|
 1:06.59 INFO 2117 |nsSocketTransportService              |      384      384|       1        1|
 1:06.59 INFO 2127 |nsStringBuffer                        |        8     1048|  184173      131|
 1:06.59 INFO 2214 |nsWeakReference                       |       40       40|     888        1|
 1:06.59 INFO 
 1:06.59 INFO nsTraceRefcnt::DumpStatistics: 2278 entries
 1:06.59 INFO leakcheck: default leaked 1 AddrHostRecord
 1:06.59 INFO leakcheck: default leaked 1 AddrInfo
 1:06.59 INFO leakcheck: default leaked 1 CommonSocketControl
 1:06.59 INFO leakcheck: default leaked 4 CondVar
 1:06.59 INFO leakcheck: default leaked 1 CookieService
 1:06.59 INFO leakcheck: default leaked 2 DataStorage
 1:06.59 INFO leakcheck: default leaked 2 HpackDynamicTableReporter
 1:06.59 INFO leakcheck: default leaked 1 Http2Session
 1:06.59 INFO leakcheck: default leaked 1 Http2StreamTunnel
 1:06.59 INFO leakcheck: default leaked 1 InputStreamTunnel
 1:06.59 INFO leakcheck: default leaked 16 Mutex
 1:06.59 INFO leakcheck: default leaked 1 NSSSocketControl
 1:06.59 INFO leakcheck: default leaked 1 OutputStreamTunnel
 1:06.59 INFO leakcheck: default leaked 1 PollableEvent
 1:06.59 INFO leakcheck: default leaked 1 ReentrantMonitor
 1:06.59 INFO leakcheck: default leaked 1 RequestContextService
 1:06.59 INFO leakcheck: default leaked 2 TaskQueue
 1:06.59 INFO leakcheck: default leaked 1 ThirdPartyUtil
 1:06.59 INFO leakcheck: default leaked 2 ThreadSafeWeakReference
 1:06.59 INFO leakcheck: default leaked 1 TlsHandshaker
 1:06.59 INFO leakcheck: default leaked 1 WeakReference
 1:06.59 INFO leakcheck: default leaked 1 nsCategoryObserver
 1:06.59 INFO leakcheck: default leaked 1 nsDNSRecord
 1:06.59 INFO leakcheck: default leaked 3 nsDeque
 1:06.59 INFO leakcheck: default leaked 3 nsDequeBase
 1:06.59 INFO leakcheck: default leaked 1 nsEffectiveTLDService
 1:06.59 INFO leakcheck: default leaked 1 nsHostRecord
 1:06.59 INFO leakcheck: default leaked 2 nsHttpAuthCache::OriginClearObserver
 1:06.59 INFO leakcheck: default leaked 1 nsHttpConnection
 1:06.59 INFO leakcheck: default leaked 1 nsHttpConnectionInfo
 1:06.59 INFO leakcheck: default leaked 1 nsHttpConnectionMgr
 1:06.59 INFO leakcheck: default leaked 1 nsHttpHandler
 1:06.59 INFO leakcheck: default leaked 1 nsIDNService
 1:06.59 INFO leakcheck: default leaked 1 nsIOService
 1:06.59 INFO leakcheck: default leaked 2 nsLocalFile
 1:06.59 INFO leakcheck: default leaked 3 nsMainThreadPtrHolder<T>
 1:06.59 INFO leakcheck: default leaked 3 nsNSSCertificate
 1:06.59 INFO leakcheck: default leaked 1 nsNetworkLinkService
 1:06.59 INFO leakcheck: default leaked 1 nsObserverService
 1:06.59 INFO leakcheck: default leaked 1 nsSiteSecurityService
 1:06.59 INFO leakcheck: default leaked 1 nsSocketTransport
 1:06.59 INFO leakcheck: default leaked 1 nsSocketTransportService
 1:06.59 INFO leakcheck: default leaked 131 nsStringBuffer
 1:06.59 INFO leakcheck: default leaked 1 nsWeakReference
 1:06.59 FAIL leakcheck: default 15760 bytes leaked


 1:06.59 INFO leakcheck | Processing leak log file /tmp/tmpyvz81a1m/runtests_leaks_908838_tab_pid909275.log
 1:06.59 PASS leakcheck: tab no leaks detected!

 1:06.59 INFO leakcheck | Processing leak log file /tmp/tmpyvz81a1m/runtests_leaks_908838_tab_pid909388.log
 1:06.59 PASS leakcheck: tab no leaks detected!
...
Assignee: nobody → edgul
Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
See Also: → 1772213

Testing looks good.

Remote:

Local xpcshell (linux 64 bit):

  • netwerk/test/unit/test_websocket_*
  • network/test/unit/test_http2-proxy*
Pushed by eguloien@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e22498a1b981 Fix leak in wpt basic-auth test for websocket over http2. r=kershaw,necko-reviewers
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: