Bug 1804732 - Fix leak in wpt basic-auth test for websocket over http2. r=kershaw,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D164257